# embedguard

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CONTRIBUTORS.md  DATA_DESCRIPTION.md  Dockerfile  README.md  pyproject.toml  reproduce.sh  requirements.txt
.github/workflows/: ci.yml
data/benchmarks/msmarco/: questions.jsonl
data/benchmarks/nq/: questions.jsonl
docs/: INSTALL.md  USAGE.md
embedguard/: __init__.py  cli.py  config.py  core.py  types.py
embedguard/correlation_engine/: __init__.py
embedguard/embedding_attestation/: __init__.py
embedguard/output_verifier/: __init__.py
embedguard/prompt_detector/: __init__.py
embedguard/retrieval_analyzer/: __init__.py
embedguard/utils/: __init__.py
examples/: advanced_configuration.py  basic_usage.py  integration_example.py  run_benchmarks.py
paper/: .gitkeep  EmbedGuard_FINAL_Submission.docx  EmbedGuard_Submission_Final.docx  EmbedGuard_Submission_Ready_v2.md  FIGURE_PROMPTS.md  README.md  SUBMISSION_GUIDE.md  TIER1_VENUE_PLAN.md  VALIDATION_REPORT.txt  manuscript.css  manuscript.md  render_manuscript.sh
paper/data/: tier1_ablation_vor.json
paper/peerj_submission/: EmbedGuard_Manuscript.docx  EmbedGuard_Manuscript_TextOnly.docx  SUBMISSION_INSTRUCTIONS.md  create_text_only.py
paper/peerj_submission/supplementary/: code_doi.txt
paper/peerj_submission/unpacked/: [Content_Types].xml
paper/research/: novelty-scan-2026-07-09.md  rag-security-evidence-2024-2026.md
paper/scripts/: create_final_docx.py  create_submission_package.py  create_submission_package_v2.py  figure1_architecture.py  generate_figures.py  generate_tier1_figures.py
paper/submission_final/: EmbedGuard_Submission.docx
results/: benchmark_report_20260124_162456.md  benchmark_report_20260124_183615.md  benchmark_report_20260124_194739.md  benchmark_report_20260124_203030.md  benchmark_report_20260124_204550.md  benchmark_report_20260710_025640.md  benchmark_results_20260124_162456.json  benchmark_results_20260124_183615.json  benchmark_results_20260124_194739.json  benchmark_results_20260124_203030.json  benchmark_results_20260124_204550.json  benchmark_results_20260125_004355.json  benchmark_results_20260125_004444.json  benchmark_results_20260125_004914.json  latest_results.json  statistical_analysis.json
scripts/: generate_test_data.py  statistical_tests.py
src/: core.py
src/prompt_detector/: __init__.py
src/retrieval_analyzer/: __init__.py
tests/: test_cli.py  test_core.py  test_correlation_engine.py  test_embedding_attestation.py  test_evidence_integrity.py  test_integration_example.py  test_neural_classifier.py  test_output_verifier.py  test_prompt_detector.py  test_retrieval_analyzer.py
zenodo_package/embedguard-v1.0/: CITATION.cff
zenodo_package/embedguard-v1.0/docs/: INSTALL.md
zenodo_package/embedguard-v1.0/tests/: __init__.py  (+1 more)
zenodo_package/embedguard-v2.1/: CHANGELOG.md  LICENSE  SUBMISSION_CHECKLIST.md  ZENODO_README.md  pyproject.toml  requirements.txt
zenodo_package/embedguard-v3.0/: CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  ZENODO_README.md
(+36 files in other folders)
