[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embedguard"
version = "1.0.0"
description = "Cross-Layer Detection and Provenance Attestation for Adversarial Embedding Attacks in RAG Systems"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Neeraj Kumar Singh Beshane", email = "b.neerajkumarsingh@gmail.com"}
]
maintainers = [
    {name = "Neeraj Kumar Singh Beshane", email = "b.neerajkumarsingh@gmail.com"}
]
keywords = [
    "rag",
    "security",
    "embeddings",
    "adversarial-attacks",
    "llm",
    "machine-learning",
    "trusted-execution-environment",
    "retrieval-augmented-generation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "faiss-cpu>=1.7.4",
    "pydantic>=2.0.0",
    "tqdm>=4.65.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.0.270",
]
gpu = [
    "faiss-gpu>=1.7.4",
]
tee = [
    "cryptography>=41.0.0",
    "pyopenssl>=23.0.0",
]
all = [
    "embedguard[dev,gpu,tee]",
]

[project.urls]
Homepage = "https://github.com/neerazz/embedguard"
Documentation = "https://github.com/neerazz/embedguard#readme"
Repository = "https://github.com/neerazz/embedguard.git"
Issues = "https://github.com/neerazz/embedguard/issues"

[project.scripts]
embedguard = "embedguard.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["embedguard*"]

[tool.setuptools.package-data]
"*" = ["py.typed", "*.json", "*.yaml"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=embedguard --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104", "D107"]
